start fix manager views